# harpy-tablet

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  read_serial.py  sdkconfig  sdkconfig.defaults  wait_serial.py
.github/workflows/: build-tweak.yml
NavRelay-debs/NavRelay-debs/: com.harpy.navrelay_1.0.0_iphoneos-arm.deb  com.harpy.navrelay_1.0.0_iphoneos-arm64.deb  com.harpy.navrelay_1.1.0_iphoneos-arm.deb  com.harpy.navrelay_1.1.0_iphoneos-arm64.deb  com.harpy.navrelay_1.2.0_iphoneos-arm.deb  com.harpy.navrelay_1.2.0_iphoneos-arm64.deb
ios_tweak/NavRelay/: Makefile  NavRelay.plist  README.md  Tweak.x  control
main/: CMakeLists.txt  ble_ams.c  ble_ancs.c  ble_hid.c  ble_nav_service.c  boot_logo.c  bt_manager.c  ch422g.c  file_server.c  game_2048.c  game_snake.c  idf_component.yml  lcd_driver.c  main.c  stream_viewer.c  time_manager.c  touch_driver.c  ui_adc.c  ui_can.c  ui_carplay.c  ui_games.c  ui_home.c  ui_keyboard.c  ui_network.c  ui_rs485.c  ui_sdcard.c  ui_settings.c  wifi_manager.c
main/include/: ble_ams.h  ble_ancs.h  ble_hid.h  ble_nav_service.h  boot_logo.h  bt_manager.h  ch422g.h  file_server.h  harpy_config.h  lcd_driver.h  stream_viewer.h  time_manager.h  touch_driver.h  ui_adc.h  ui_can.h  ui_carplay.h  ui_games.h  ui_home.h  ui_keyboard.h  ui_network.h  ui_rs485.h  ui_sdcard.h  ui_settings.h  wifi_manager.h
