idf_component_register(
    SRCS 
        "main.c"
        "boot_logo.c"
        "wifi_manager.c"
        "bt_manager.c"
        "stream_viewer.c"
        "ui_home.c"
        "ui_keyboard.c"
        "ui_settings.c"
        "ui_sdcard.c"
        "ui_rs485.c"
        "ui_adc.c"
        "ui_can.c"
        "ui_network.c"
        "file_server.c"
        "lcd_driver.c"
        "touch_driver.c"
        "ch422g.c"
        "time_manager.c"
        "ui_games.c"
        "game_2048.c"
        "game_snake.c"
        "ble_hid.c"
        "ble_ams.c"
        "ble_ancs.c"
        "ble_nav_service.c"
        "ui_carplay.c"
    INCLUDE_DIRS 
        "."
        "include"
    REQUIRES
        driver
        esp_lcd
        esp_wifi
        esp_event
        esp_netif
        esp_http_client
        esp_http_server
        nvs_flash
        bt
        lvgl
        esp_timer
        esp_psram
        fatfs
        sdmmc
        vfs
        esp_adc
)
